--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Llama</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<%= yield %>
+    <title>tea</title>
 
-</body>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
+    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+
+  	<nav id="nav" class="top-bar" data-topbar role="navigation">
+      <ul class="title-area">
+        <li class="name">
+          <h1>asdf</h1>
+        </li>
+      </ul>
+
+      <section class="top-bar-section">
+        <!-- Right Nav Section -->
+        <ul class="right">
+          <li class="has-dropdown">
+            <a href="#">Andrew Ma</a>
+            <ul class="dropdown">
+              <li><a href="https://www.linkedin.com/in/softwarelover">Andrew's LinkedIn</a></li>
+              <li><a href="https://github.com/Maast3r">Andrew's GitHub</a></li>
+              <li><a href="http://www.rose-hulman.edu/~maas/">Andrew's Website</a></li>
+            </ul>
+          </li>
+        </ul>
+
+        <!-- Left Nav Section -->
+        <ul class="left">
+           <li>df</li>
+          <li><a href="#">asdf</a></li>
+        </ul>
+      </section>
+    </nav>
+
+    <%= yield %>
+
+  </body>
 </html>
