--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>tea</title>
+    <title>L for Llama</title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/custom.modernizr" %>
@@ -17,7 +17,7 @@
   	<nav id="nav" class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <h1>asdf</h1>
+          <h1>L for LLama</h1>
         </li>
       </ul>
 
@@ -36,13 +36,20 @@
 
         <!-- Left Nav Section -->
         <ul class="left">
-           <li>df</li>
           <li><a href="#">asdf</a></li>
         </ul>
       </section>
     </nav>
 
     <%= yield %>
+
+    <br /><br />
+    <div id="footer">
+      <div id="foot" class="row">
+        <span class="small-9 small-centered columns">If you have any suggestions, please feel free to email them to maastergotmail@gmail.com. If you find any bugs with L for Llama, please email them to maastergotmail@gmail.com. No llamas were harmed in the making of this website. Go llamas.</span>
+      </div>
+    </div>
+
     <%= javascript_include_tag "application" %>
   </body>
 </html>
