--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Main#index</h1>
-<p>Find me in app/views/main/index.html.erb</p>
+<div class="row titleHolder">
+	<h1>LLLLL</h1>
+</div>
+
+
+<div class="llamaHolder">
+</div>
