--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,26 @@
 <div class="row titleHolder">
-	<h1>LLLLL</h1>
+	<h1>LLAMA POWER</h1>
 </div>
 
 
-<div class="llamaHolder">
+<div class="row">
+	<div class="llamaHolder">
+	</div>
 </div>
+
+<br /><br />
+
+<div class="row runningLlamaWrapper">
+	<div class="runningLlama">
+		<div id="lbody"></div>
+		<div id="backLegL"></div>
+		<div id="backLegR"></div>
+		<div id="frontLegL">\</div>
+		<div id="frontLegR"></div>
+	</div>
+</div>
+
+<div class="row movingLlamaDesc">
+	<h6>This llama animation was made purely using CSS3 animations</h6>
+</div>
+
