--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -15,7 +15,7 @@
 		<div id="lbody"></div>
 		<div id="backLegL"></div>
 		<div id="backLegR"></div>
-		<div id="frontLegL">\</div>
+		<div id="frontLegL"></div>
 		<div id="frontLegR"></div>
 	</div>
 </div>
