--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -139,47 +139,133 @@
     height: 295px;
     background-image: url("/assets/images/llamaBody.png");
     background-repeat: no-repeat;
+    z-index: 5;
 }
 
 #backLegL{
     width: 106px;
-    height: 201px;
+    height: 402px;
     background-image: url("/assets/images/llamaLeftBackLeg.png");
     background-repeat: no-repeat;
-    bottom: 100px;
+    bottom: 335px;
+    z-index: 4;
+
+    -webkit-animation:spin4 1s linear infinite;
+    -moz-animation:spin4 1s linear infinite;
+    animation:spin4 1s linear infinite;
+    animation-direction: alternate;
 }
 
 #backLegR{
     width: 120px;
-    height: 226px;
+    height: 452px;
     background-image: url("/assets/images/llamaRightBackLeg.png");
     background-repeat: no-repeat;
-    bottom: 330px;
+    bottom: 780px;
     left: 40px;
+    z-index: 6;
+
+    -webkit-animation:spin3 1s linear infinite;
+    -moz-animation:spin3 1s linear infinite;
+    animation:spin3 1s linear infinite;
+    animation-direction: alternate;
 }
 
 #frontLegL{
     width: 59px;
-    height: 118px;
+    height: 236px;
     background-image: url("/assets/images/llamaLeftFrontLeg.png");
     background-repeat: no-repeat;
-    bottom: 450px;
+    bottom: 1030px;
     left: 150px;
+    z-index: 4;
+
+    -webkit-animation:spin2 1s linear infinite;
+    -moz-animation:spin2 1s linear infinite;
+    animation:spin2 1s linear infinite;
+    animation-direction: alternate;
 }
 
 #frontLegR{
     width: 59px;
-    height: 118px;
+    height: 236px;
     background-image: url("/assets/images/llamaLeftFrontLeg.png");
     background-repeat: no-repeat;
-    bottom: 560px;
+    bottom: 1260px;
     left: 200px;
+    z-index: 6;
 
-    -webkit-animation:spin 4s linear infinite;
-    -moz-animation:spin 4s linear infinite;
-    animation:spin 4s linear infinite;
+    -webkit-animation:spin1 1s linear infinite;
+    -moz-animation:spin1 1s linear infinite;
+    animation:spin1 1s linear infinite;
+    animation-direction: alternate;
 }
 
-@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+/*front right leg*/
+@-moz-keyframes spin1 { 
+    0% {-moz-transform: rotate(-35deg);}
+    100% { -moz-transform: rotate(35deg); }
+}
+@-webkit-keyframes spin1 { 
+    0% { -webkit-transform: rotate(-35deg);}
+    100% { -webkit-transform: rotate(35deg); } 
+}
+@keyframes spin1 { 
+     0% { -webkit-transform: rotate(-35deg);}
+    100% { -webkit-transform: rotate(35deg); } 
+}
+
+/*front left leg*/ 
+@-moz-keyframes spin2 { 
+    0% {-moz-transform: rotate(35deg);}
+    100% { -moz-transform: rotate(-35deg); }
+}
+@-webkit-keyframes spin2 { 
+    0% { -webkit-transform: rotate(35deg);}
+    100% { -webkit-transform: rotate(-35deg); } 
+}
+@keyframes spin2 { 
+     0% { -webkit-transform: rotate(35deg);}
+    100% { -webkit-transform: rotate(-35deg); } 
+}
+
+/*back right leg*/ 
+@-moz-keyframes spin3 { 
+    0% {-moz-transform: rotate(30deg);}
+    100% { -moz-transform: rotate(-5deg); }
+}
+@-webkit-keyframes spin3 { 
+    0% { -webkit-transform: rotate(30deg);}
+    100% { -webkit-transform: rotate(-5deg); } 
+}
+@keyframes spin3 { 
+     0% { -webkit-transform: rotate(30deg);}
+    100% { -webkit-transform: rotate(-5deg); } 
+}
+
+/*back left leg*/ 
+@-moz-keyframes spin4 { 
+    0% {-moz-transform: rotate(-30deg);}
+    100% { -moz-transform: rotate(10deg); }
+}
+@-webkit-keyframes spin4 { 
+    0% { -webkit-transform: rotate(-30deg);}
+    100% { -webkit-transform: rotate(10deg); } 
+}
+@keyframes spin4 { 
+     0% { -webkit-transform: rotate(-30deg);}
+    100% { -webkit-transform: rotate(10deg); } 
+}
+
+/*oscillate llama*/ 
+@-webkit-keyframes oscillate {
+    0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}
+    40% {-webkit-transform: translateY(-30px);}
+    60% {-webkit-transform: translateY(-15px);}
+} 
+ 
+@keyframes oscillate {
+    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+    40% {transform: translateY(-30px);}
+    60% {transform: translateY(-15px);}
+} 
