--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -140,6 +140,10 @@
     background-image: url("/assets/images/llamaBody.png");
     background-repeat: no-repeat;
     z-index: 5;
+    -webkit-animation:spin4 1s oscillate infinite;
+    -moz-animation:spin4 1s oscillate infinite;
+    animation:spin4 1s oscillate infinite;
+    animation-direction: alternate;
 }
 
 #backLegL{
@@ -268,4 +272,4 @@
     0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
     40% {transform: translateY(-30px);}
     60% {transform: translateY(-15px);}
-} 
+}
