fixed llama animation. added clouds and sky

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,10 @@
 
         <!-- Left Nav Section -->
         <ul class="left">
-          <li><a href="#">asdf</a></li>
+          <li><a href="#">Why?</a></li>
+          <li><a href="#">What?</a></li>
+          <li><a href="#">Where?</a></li>
+          <li><a href="#">How?</a></li>
         </ul>
       </section>
     </nav>
