--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,7 +4,7 @@
 
 
 <div class="row">
-	<div class="llamaHolder">
+	<!-- <div class="llamaHolder"> -->
 	</div>
 </div>
 
@@ -13,10 +13,18 @@
 <div class="row runningLlamaWrapper">
 	<div class="runningLlama">
 		<div id="lbody"></div>
-		<div id="backLegL"></div>
-		<div id="backLegR"></div>
-		<div id="frontLegL"></div>
-		<div id="frontLegR"></div>
+		<div id="backLegLWrap">
+			<div id="backLegL"></div>
+		</div>
+		<!-- <div id="backLegRWrap"> -->
+			<div id="backLegR"></div>
+		<!-- </div> -->
+		<div id="frontLegLWrap">
+			<div id="frontLegL"></div>
+		</div>
+		<!-- <div id="frontLegRWrap"> -->
+			<div id="frontLegR"></div>
+		<!-- </div> -->
 	</div>
 </div>
 
