--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -119,15 +119,19 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    height: 400px;
+    height: 500px;
     width: 100%;
+    background-image: url("/assets/images/background.png");
+
+    -webkit-animation: backgroundScroll 20  s linear infinite;
+    animation: backgroundScroll 20s linear infinite;
 }
 
 .runningLlama{
     display: inline-block;
     width: 400px;
     height: 100%;
-
+    margin-top: 100px;
 }
 
 #lbody, #backLegL, #backLegR, #frontLegL, #frontLegR{
@@ -140,10 +144,18 @@
     background-image: url("/assets/images/llamaBody.png");
     background-repeat: no-repeat;
     z-index: 5;
-    -webkit-animation:spin4 1s oscillate infinite;
-    -moz-animation:spin4 1s oscillate infinite;
-    animation:spin4 1s oscillate infinite;
-    animation-direction: alternate;
+    -webkit-animation:oscillate 1s infinite;
+    -moz-animation:oscillate 1s oscillate infinite;
+    animation:oscillate 1s oscillate infinite;
+}
+
+#backLegLWrap{
+    position: relative;
+    bottom: 335px;
+
+    -webkit-animation:oscillate 1s infinite;
+    -moz-animation:oscillate 1s infinite;
+    animation:oscillate 1s infinite;
 }
 
 #backLegL{
@@ -151,7 +163,6 @@
     height: 402px;
     background-image: url("/assets/images/llamaLeftBackLeg.png");
     background-repeat: no-repeat;
-    bottom: 335px;
     z-index: 4;
 
     -webkit-animation:spin4 1s linear infinite;
@@ -160,14 +171,24 @@
     animation-direction: alternate;
 }
 
+#backLegRWrap{
+    position: relative;
+   
+    z-index: 7;
+
+    -webkit-animation:oscillate 1s infinite;
+    -moz-animation:oscillate 1s infinite;
+    animation:oscillate 1s infinite;
+}
+
 #backLegR{
     width: 120px;
     height: 452px;
     background-image: url("/assets/images/llamaRightBackLeg.png");
     background-repeat: no-repeat;
-    bottom: 780px;
-    left: 40px;
     z-index: 6;
+     bottom: 780px;
+    left: 40px;
 
     -webkit-animation:spin3 1s linear infinite;
     -moz-animation:spin3 1s linear infinite;
@@ -175,13 +196,21 @@
     animation-direction: alternate;
 }
 
+#frontLegLWrap{
+    position: relative;
+    bottom: 1020px;
+    left: 150px;
+
+    -webkit-animation:oscillate 1s infinite;
+    -moz-animation:oscillate 1s infinite;
+    animation:oscillate 1s infinite;
+}
+
 #frontLegL{
     width: 59px;
     height: 236px;
     background-image: url("/assets/images/llamaLeftFrontLeg.png");
     background-repeat: no-repeat;
-    bottom: 1030px;
-    left: 150px;
     z-index: 4;
 
     -webkit-animation:spin2 1s linear infinite;
@@ -190,14 +219,24 @@
     animation-direction: alternate;
 }
 
+#frontLegRWrap{
+    position: relative;
+    
+    z-index: 10;
+
+    -webkit-animation:oscillate 1s infinite;
+    -moz-animation:oscillate 1s infinite;
+    animation:oscillate 1s infinite;
+}
+
 #frontLegR{
     width: 59px;
     height: 236px;
     background-image: url("/assets/images/llamaLeftFrontLeg.png");
     background-repeat: no-repeat;
+    z-index: 6;
     bottom: 1260px;
     left: 200px;
-    z-index: 6;
 
     -webkit-animation:spin1 1s linear infinite;
     -moz-animation:spin1 1s linear infinite;
@@ -263,13 +302,30 @@
 
 /*oscillate llama*/ 
 @-webkit-keyframes oscillate {
-    0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}
-    40% {-webkit-transform: translateY(-30px);}
-    60% {-webkit-transform: translateY(-15px);}
+    0% {-webkit-transform: translateY(0);}
+    50% {-webkit-transform: translateY(-15px);}
 } 
  
 @keyframes oscillate {
-    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-    40% {transform: translateY(-30px);}
-    60% {transform: translateY(-15px);}
+    0% {-webkit-transform: translateY(0);}
+    50% {-webkit-transform: translateY(-15px);}
+}
+
+
+#background-scroll {
+width: 200px;
+height: 200px;
+background: url(clouds-full.png) repeat-y;
+-webkit-animation: backgroundScroll 20s linear infinite;
+animation: backgroundScroll 20s linear infinite;
+}
+ 
+@-webkit-keyframes backgroundScroll {
+    from {background-position: 0 0;}
+    to {background-position: -1000px 0;}
+}
+ 
+@keyframes backgroundScroll {
+    from {background-position: 0 0;}
+    to {background-position: -1000px 0;}
 }
