--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>L for Llama</title>
+    <title><%= content_for?(:title) ? yield(:title) : "L for Llama" %></title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/custom.modernizr" %>
@@ -17,7 +17,7 @@
   	<nav id="nav" class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <h1>L for LLama</h1>
+          <h1><%= link_to "L for Llama", main_index_path %></h1>
         </li>
       </ul>
 
@@ -36,10 +36,10 @@
 
         <!-- Left Nav Section -->
         <ul class="left">
-          <li><a href="#">Why?</a></li>
-          <li><a href="#">What?</a></li>
-          <li><a href="#">Where?</a></li>
-          <li><a href="#">How?</a></li>
+          <li><%= link_to "Why?", why_path %></li>
+          <li><%= link_to "What?", what_path %></li>
+          <li><%= link_to "Where?", where_path %></li>
+          <li><%= link_to "How?", how_path %></li>
         </ul>
       </section>
     </nav>
@@ -49,7 +49,7 @@
     <br /><br />
     <div id="footer">
       <div id="foot" class="row">
-        <span class="small-9 small-centered columns">If you have any suggestions, please feel free to email them to maastergotmail@gmail.com. If you find any bugs with L for Llama, please email them to maastergotmail@gmail.com. No llamas were harmed in the making of this website. Go llamas.</span>
+        <span class="small-9 small-centered columns">If you have any suggestions or find any bugs, please feel free to email them to maastergotmail@gmail.com. No llamas were harmed in the making of this website. Go llamas.</span>
       </div>
     </div>
 
