--- a/app/views/main/how.html.erb
+++ b/app/views/main/how.html.erb
@@ -1,1 +1,7 @@
-<%= javascript_include_tag "how", 'data-turbolinks-track' => true %>
+<div class="row titleHolder">
+	<h1>How?</h1>
+</div>
+
+<br /><br /><br /><br /><br /><br />
+
+<%= javascript_include_tag "how" %>
