--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -40,4 +40,4 @@
 	<h6>The animations on this page are made purely using CSS3 animations</h6>
 </div>
 
-<%= javascript_include_tag "index", 'data-turbolinks-track' => true %>
+<%= javascript_include_tag "index" %>
