--- a/app/views/main/why.html.erb
+++ b/app/views/main/why.html.erb
@@ -3,17 +3,17 @@
 </div>
 <br /><br /><br /><br /><br /><br /><br />
 
-<div class="row">
+<div class="row myCanvasWrapper">
 	<canvas id="myCanvas">Your browser does not support HTML5 canvas. Use a newer browser to play with bubbles :)</canvas>
 </div>
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
 <div class="row movingLlamaDesc">
-	<h6>Thank you to Google, Rob Hawkes, and Mark Brenig-Jones &amp; Emile Petrone. This animated wordS bubble was inspired by and built on their work.</h6>
+	<h6>Thank you to Google, Rob Hawkes, and Mark Brenig-Jones &amp; Emile Petrone. This animated words bubble was inspired by and built on their work.</h6>
 </div>
 
 
-<%= javascript_include_tag "alphabet", 'data-turbolinks-track' => true %>
-<%= javascript_include_tag "bubble", 'data-turbolinks-track' => true %>
-<%= javascript_include_tag "why", 'data-turbolinks-track' => true %>
+<%= javascript_include_tag "alphabet" %>
+<%= javascript_include_tag "bubble" %>
+<%= javascript_include_tag "why" %>
