--- a/app/views/main/what.html.erb
+++ b/app/views/main/what.html.erb
@@ -26,4 +26,4 @@
     <h6>The farm was built using HTML5 canvas and JS aniamtions</h6>
 </div>
 
-<%= javascript_include_tag "what", 'data-turbolinks-track' => true %>
+<%= javascript_include_tag "what" %>
