--- a/app/views/main/where.html.erb
+++ b/app/views/main/where.html.erb
@@ -82,4 +82,4 @@
     <h6>The animations on this page are made purely using CSS3 animations</h6>
 </div>
 
-<%= javascript_include_tag "where", 'data-turbolinks-track' => true %>
+<%= javascript_include_tag "where" %>
