--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,6 @@
           <li><%= link_to "Why?", why_path %></li>
           <li><%= link_to "What?", what_path %></li>
           <li><%= link_to "Where?", where_path %></li>
-          <li><%= link_to "How?", how_path %></li>
         </ul>
       </section>
     </nav>
@@ -53,6 +52,15 @@
       </div>
     </div>
 
-     
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-67995206-2', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
